--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,9 @@ body {
     float: left;
     margin-right: 10px;
     margin-bottom: 10px;
+    padding: 20px;
+    border: .5px solid ;
+    background: #d8d7d7
 }
 a {
     text-decoration: currentColor;
@@ -74,9 +77,6 @@ li {
     float: right;
     width: 480px;
     text-align: right;
-}
-.nav2 {
-    
 }
 .footer {
     font: 60% color white;
@@ -233,5 +233,11 @@ label{
     font-size: 89%;
     margin-left: 15px;
     margin-right: -15px
+}
+#myPic {
+    float: none;
+    width: 100%;
+    margin-top: 3px;
+    border-radius: 0%
 }
 }
